# hero_bringup

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  deploy_key.enc  package.xml  setup.py  test_moveit.py  toyota_dev_versions.yaml  toyota_robot_versions.yaml
.github/workflows/: main.yml
env-hooks/: 99.amigo_functions.bash  99.hero_functions.bash
hsrb_bringup/launch/: hsrb_bringup.launch  hsrb_bringup_common.launch  hsrb_logger.launch  hsrb_monitor.launch
hsrb_bringup/params/: hsrb_analyzers_hsrb.yaml
hsrb_common_config/params/: hsrb_controller_config.yaml  hsrb_odometry_config.yaml  hsrb_sensor_config.yaml
hsrb_description/robots/: hsrb1s.urdf.xacro  hsrb2s.urdf.xacro  hsrb3s.urdf.xacro  hsrb4s.urdf.xacro  upload_hsrb.launch
hsrb_gazebo_bringup/params/: hsrb_controller_config.yaml  hsrb_pid_gains_gazebo_ros_control.yaml  hsrb_pid_gains_gazebo_ros_control_fast.yaml  hsrb_pid_gains_hsrb.yaml  hsrb_pid_gains_hsrb_fast.yaml
hsrb_impedance_control/launch/: impedance_control_node.launch
hsrb_manipulation_launch/launch/: safe_pose_changer.launch
hsrb_moveit_config/config/: hsrb_controllers.yaml  sensors_xtion.yaml
hsrb_moveit_config/launch/: hsrb_moveit_controller_manager.launch.xml  move_group.launch  trajectory_execution.launch.xml
launch/: .middleware_final.launch.swp  battery_manager_laptop.launch  free_mode.launch  gmapping.launch  hardware.launch  head.launch  head_rgbd_sensor.launch  hero2_festival_tts.launch  hero_bringup.launch  joy_teleop.launch  load_params.launch  manipulation.launch  middleware.launch  middleware_final.launch  middleware_final_gmapping.launch  middleware_gmapping.launch  middleware_navigation.launch  middleware_open.launch  middleware_r5cop.launch  middleware_restaurant.launch  middleware_robonurse.launch  moveit.launch  multimaster.launch  phone_ui.launch  record_robocup.launch  reloadskills.launch  speech_recognition.launch  start.launch  start_2.launch  start_debug.launch  sync.launch  webserver.launch
launch/challenges/: challenge_r5cop.launch
launch/include/: hsrb.xml  hsrb_bringup.xml  hsrb_no_controllers.xml
launch/simulation/: gazebo.launch  hsrb.launch  simulation.launch
launch/state_machines/: README.md  challenge_carry_my_luggage.launch  challenge_clean_the_table.launch  challenge_cleanup.launch  challenge_dishwasher.launch  challenge_eegpsr.launch  challenge_egpsr.launch  challenge_final.launch  challenge_find_my_mates.launch  challenge_gpsr.launch  challenge_hand_me_that.launch  challenge_help_me_carry.launch  challenge_move_obstacles.launch  challenge_open.launch  challenge_r5cop.launch  challenge_receptionist.launch  challenge_restaurant.launch  challenge_rips.launch  demo.launch  (+22 more)
machines/: amigo1.machine  amigo2.machine  amigo3.machine  amigo4.machine  hero1.machine  hero2.machine  hsrb.machine  localhost.machine
scripts/: _hero-start.bash  amigo-demo-mode.service  amigo-start.service  amigo_bringup_start_launch  battery_conversion_node  check_toyota_software  gazebo_pose_setter  hero-battery-conversion.service  hero-demo-mode.service  hero-monitor.service  hero-roscore.service  hero-start.service  hero-windows-speech.service  hero1-battery-conversion.service  hero1-battery-manager-laptop.service  hero1-display.service  hero1-monitor.service  hero1-start.service  hero1-vboxautostart-service.service  hero1-vboxballoonctrl-service.service  hero1-vboxdrv.service  hero1-vboxweb-service.service  hero1-windows-speech.service  hero2-openpose.service  hero2-rgbd-shm-server.service  hero2-upower-ros.service  hero_robot_service  hero_roscore_service  install_and_disable_systemd  install_systemd_autostart_demo_mode_launch  install_systemd_autostart_hero1  install_systemd_autostart_hero1-demo  install_systemd_autostart_hero2  install_systemd_autostart_hero2-demo  install_systemd_autostart_openpose  install_systemd_autostart_start_launch  joystick_controls_node  ntpdate.service  openpose.service  record_video_from_camera.py  (+5 more)
src/: battery_manager_laptop.cpp
(+196 files in other folders)
