<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hero_bringup</name>
  <version>0.0.0</version>
  <description>The hero_bringup package</description>

  <maintainer email="p.v.dooren@student.tue.nl">Peter van Dooren</maintainer>
  <maintainer email="j.geijsberts@student.tue.nl">Josja Geijsberts</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs/</build_depend>

  <run_depend>sensor_msgs</run_depend>

  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hero_bridge</exec_depend>
  <exec_depend>hsrb_description</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>
  <exec_depend>robot_launch_files</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
